feat: pagina gato con botas

--- a/dllo-web-test/actividad-1/Index.html
+++ b/dllo-web-test/actividad-1/Index.html
@@ -8,13 +8,98 @@
     <title>Desarrollo web</title>
   </head>
   <body>
-    <div class="container">
-      <div class="half left">
-        <div class="image">
-          <img src="Foto profesional.jpg" alt="foto" width="150 px" />
-        </div>
+    <div>
+      <h1>El Gato con Botas: el último deseo</h1>
+      <hr />
+    </div>
+    <div class="splited">
+      <img src="movie_picture.jpg" alt="movie picture" />
+      <div class="text">
+        <h3>Descripción</h3>
+        <p>
+          El Gato con Botas: el último deseo (título original en inglés: Puss in
+          Boots: The Last Wish) es una película estadounidense de comedia de
+          aventuras animada por computadora producida por DreamWorks Animation y
+          distribuida por Universal Pictures. La película es una secuela de El
+          Gato con Botas (2011) y es derivada de la franquicia de Shrek. Está
+          dirigida por Joel Crawford, con la codirección de Januel Mercado, y
+          está protagonizada por las voces de Antonio Banderas y Salma Hayek,
+          que retoman sus papeles del Gato con Botas y Kitty Patitas Suaves,
+          respectivamente. El Gato con Botas: el último deseo se estrenó en los
+          Estados Unidos el 21 de diciembre de 2022 por Universal Pictures.
+        </p>
       </div>
-      <div class="half right"></div>
+    </div>
+    <hr />
+    <div>
+      <h3>reparto</h3>
+      <ul>
+        <li><p>Gato con botas : Antonio Banderas</p></li>
+        <li><p>Kitty patitas suaves : Salma Hayek</p></li>
+        <li><p>Perrito: Harvey Guillén</p></li>
+        <li><p>Ricitos de Oro : Florence Pugh</p></li>
+        <li><p>Papá Oso : Ray Winstone</p></li>
+        <li><p>Mamá Osa : Olivia Colman</p></li>
+        <li><p>"Big" Jack Horner : John Mulaney</p></li>
+        <li><p>La Muerte:Wagner Moura</p></li>
+        <li><p>Grillo parlante : Kevin McCann</p></li>
+        <li><p>El Doctor : Anthony Méndez</p></li>
+        <li><p>Mama Luna : Da'Vine Joy Randolph</p></li>
+      </ul>
+      <hr />
+    </div>
+    <div>
+      <h3>videos</h3>
+      <table>
+        <tr>
+          <td>
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/7afDrYLajRk"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
+          </td>
+          <td>
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/VBsp5xKRAKw"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/18v5EPO5ySs"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
+          </td>
+          <td>
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/1o8GWhoD53I"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
+          </td>
+        </tr>
+      </table>
     </div>
   </body>
 </html>
