--- a/dllo-web-test/actividad-1/Index.html
+++ b/dllo-web-test/actividad-1/Index.html
@@ -73,7 +73,7 @@
       </div>
       <hr />
       <div class="videos">
-        <h3>videos</h3>
+        <h3>Videos</h3>
         <table>
           <tr>
             <td>
