--- a/dllo-web-test/Quiz/index.html
+++ b/dllo-web-test/Quiz/index.html
@@ -37,7 +37,9 @@
       <h3>Redes sociales</h3>
       <div class="list">
         <ul>
-          <li><a href="www.linkedin.com/in/adriandperdomoe"></a>linkedin</li>
+          <li>
+            <a href="https://www.linkedin.com/in/adriandperdomoe/">Linkedin</a>
+          </li>
           <li>
             <a href="https://www.facebook.com/david.perdomoecheverri"
               >Facebook</a
