feature: los links se abren en otra pestaña

--- a/dllo-web-test/Quiz/index.html
+++ b/dllo-web-test/Quiz/index.html
@@ -38,17 +38,31 @@
       <div class="list">
         <ul>
           <li>
-            <a href="https://www.linkedin.com/in/adriandperdomoe/">Linkedin</a>
+            <a
+              href="https://www.linkedin.com/in/adriandperdomoe/"
+              target="_blank"
+              >Linkedin</a
+            >
           </li>
           <li>
-            <a href="https://www.facebook.com/david.perdomoecheverri"
+            <a
+              href="https://www.facebook.com/david.perdomoecheverri"
+              target="_blank"
               >Facebook</a
             >
           </li>
           <li>
-            <a href="https://www.instagram.com/perdomoecheverri/">instagram</a>
+            <a
+              href="https://www.instagram.com/perdomoecheverri/"
+              target="_blank"
+              >instagram</a
+            >
           </li>
-          <li><a href="https://github.com/AdrianPerdomoE">github</a></li>
+          <li>
+            <a href="https://github.com/AdrianPerdomoE" target="_blank"
+              >github</a
+            >
+          </li>
         </ul>
       </div>
     </div>
